--- a/output/bliss.ini
+++ b/output/bliss.ini
@@ -1,7 +1,7 @@
 [global]
 frameskip = 1
 random_cart = 0
-cartridge = roms\World Series Major League Baseball (1983).BIN
+cartridge = C:\Users\Brandon\Emulation\ROMs\Intellivision\Space Hawk (1981) (Mattel).int
 splashtime = 6
 mode = 1
 windowed = 320x200
